[gd_scene load_steps=8 format=3 uid="uid://3muyrowplwe"]

[ext_resource type="Script" path="res://scripts/DoodleJump/doodle_jump.gd" id="1_v3xbl"]
[ext_resource type="Texture2D" uid="uid://rlyaa5uqppun" path="res://assets/images/doodlebackground.png" id="2_g6x83"]
[ext_resource type="Texture2D" uid="uid://bmt7s8boduf3b" path="res://assets/images/Square.png" id="2_utowx"]
[ext_resource type="PackedScene" uid="uid://bjr4dyw1ekamf" path="res://scenes/Microgames/doodlejump/platform.tscn" id="3_yfivc"]
[ext_resource type="Script" path="res://scripts/DoodleJump/DoodleCharacter.gd" id="4_4aar7"]
[ext_resource type="PackedScene" uid="uid://s4o7c2rf0s8" path="res://scenes/Microgames/doodlejump/coin.tscn" id="5_b1j1k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qv7mp"]
size = Vector2(34, 35)

[node name="DoodleJump" type="Node2D"]
position = Vector2(890, 364)
script = ExtResource("1_v3xbl")

[node name="Square" type="Sprite2D" parent="."]
modulate = Color(0.701448, 0.790884, 0.672883, 1)
z_index = -1
position = Vector2(72, 175.625)
scale = Vector2(0.527, 0.527)
texture = ExtResource("2_g6x83")

[node name="Platforms" type="Node2D" parent="."]
position = Vector2(-900, -208)

[node name="StaticBody2D21" parent="Platforms" instance=ExtResource("3_yfivc")]
position = Vector2(890, 841)

[node name="StaticBody2D24" parent="Platforms" instance=ExtResource("3_yfivc")]
position = Vector2(805, 500)

[node name="StaticBody2D25" parent="Platforms" instance=ExtResource("3_yfivc")]
position = Vector2(1050, 386)

[node name="StaticBody2D27" parent="Platforms" instance=ExtResource("3_yfivc")]
position = Vector2(1105, 746)

[node name="StaticBody2D28" parent="Platforms" instance=ExtResource("3_yfivc")]
position = Vector2(990, 575)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="Platforms/StaticBody2D28"]
enable_node_path = NodePath("")

[node name="StaticBody2D29" parent="Platforms" instance=ExtResource("3_yfivc")]
position = Vector2(734, 675)

[node name="StaticBody2D32" parent="Platforms" instance=ExtResource("3_yfivc")]
position = Vector2(716, 325)

[node name="StaticBody2D34" parent="Platforms" instance=ExtResource("3_yfivc")]
position = Vector2(688, 150)

[node name="StaticBody2D36" parent="Platforms" instance=ExtResource("3_yfivc")]
position = Vector2(968, 232)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(70, 176)

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 5
position = Vector2(-9, 569)
script = ExtResource("4_4aar7")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(1, 0.764706, 0.819608, 1)
position = Vector2(0, 1)
texture = ExtResource("2_utowx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_qv7mp")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Player"]

[node name="Area2D" parent="." instance=ExtResource("5_b1j1k")]
position = Vector2(7, -211)

[node name="GameTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="EndTimer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_exited" from="Platforms/StaticBody2D28/VisibleOnScreenEnabler2D" to="Player" method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="screen_exited" from="Player/VisibleOnScreenNotifier2D" to="Player" method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
